# SZE-MOSZE-2021-Signal

./: .gitignore  Doxyfile  Game.cpp  Game.h  Game_8h_source.html  Makefile  Player.cpp  Player.h  Player_8h_source.html  README.md  Words.cpp  Words.h  Words_8h_source.html  akasztofa.cpp  akasztofa.vcxproj  akasztofa.vcxproj.filters  annotated.html  classGame-members.html  classGame.html  classPlayer-members.html  classPlayer.html  classWords-members.html  classWords.html  classes.html  doxyconf  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md_README.html  md_report.html  navtreedata.js  pages.html  report.md  szavak.txt
.github/workflows/: cppchecker.yaml  doxygen.yaml  test.yml
DOC/html/: _game_8cpp.html  _game_8cpp__incl.map  _game_8cpp__incl.md5  _game_8cpp_source.html  _game_8h.html  _game_8h__dep__incl.map  _game_8h__dep__incl.md5  _game_8h__incl.map  _game_8h__incl.md5  _game_8h_source.html  _player_8cpp.html  _player_8cpp__incl.map  _player_8cpp__incl.md5  _player_8cpp_source.html  _player_8h.html  _player_8h__dep__incl.map  _player_8h__dep__incl.md5  _player_8h__incl.map  _player_8h__incl.md5  _player_8h_source.html  _r_e_a_d_m_e_8md.html  _words_8cpp.html  _words_8cpp__incl.map  _words_8cpp__incl.md5  _words_8h.html  (+63 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
test/: CMakeList.txt  CMakeLists.txt  gameTest.cpp  playerTest.cpp  wordTest.cpp
videos/: gameplay.mkv
(+61 files in other folders)
